--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,14 @@
     ]
   },
   "require": {
-    "php": ">=7.0.11",
-    "symfony/framework-bundle": "~3.0",
-    "sensio/framework-extra-bundle": "^3.0",
-    "symfony/serializer": "^3.2",
-    "symfony/validator": "^3.2"
+    "php": "^7.3.0",
+    "symfony/framework-bundle": "4.2.*",
+    "sensio/framework-extra-bundle": "^5.2",
+    "symfony/serializer": "4.2.*",
+    "symfony/validator": "4.2.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7.15",
-    "phpunit/php-code-coverage": "^4.0.4"
+    "phpunit/phpunit": "^8.0"
   },
   "extra": {
     "branch-alias": {
