--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
   },
   "require": {
     "php": "^7.3.0",
-    "symfony/framework-bundle": "4.2.*",
+    "symfony/framework-bundle": "^4.2.*",
     "sensio/framework-extra-bundle": "^5.2",
-    "symfony/serializer": "4.2.*",
-    "symfony/validator": "4.2.*"
+    "symfony/serializer": "^4.2.*",
+    "symfony/validator": "^4.2.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0"
