--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
     ]
   },
   "require": {
-    "php": "^7.3.0",
-    "symfony/framework-bundle": "^4.2.*",
+    "php": "^7.1.13",
+    "symfony/framework-bundle": "^4.2",
     "sensio/framework-extra-bundle": "^5.2",
-    "symfony/serializer": "^4.2.*",
-    "symfony/validator": "^4.2.*"
+    "symfony/serializer": "^4.2",
+    "symfony/validator": "^4.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0"
+    "phpunit/phpunit": "^6.4"
   },
   "extra": {
     "branch-alias": {
